# Team-5-24-C3

./: Makefile  README.md  pyproject.toml
data/: README.md
docs/: mkdocs.yml
docs/docs/: index.md
models/: README.md
notebooks/: README.md
team_5_24_c3/: __init__.py  dataset.py  features.py  plots.py
team_5_24_c3/modeling/: predict.py  train.py
