[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "team_5_24_c3"
version = "0.0.1"
description = "Tugas mata kuliah Pemrograman Python (Machine Learning)"
authors = [
  { name = "DA'IFA MAULANA" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["team_5_24_c3"]
include = ["pyproject.toml", "team_5_24_c3/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["team_5_24_c3"]
force-sort-within-sections = true

